--- a/front/dating/src/App.css
+++ b/front/dating/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+* {
+  scrollbar-width: none; /* Для Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Для Chrome, Safari та Opera */
+}
